WIP: Book parsing